# Word_Elimination_Game_Example

./: .gitignore  CMakeLists.txt  README.md
client_server/: client.cpp  server.cpp
core/: constants.h  database.cpp  database.h  person.cpp  person.h  utils.cpp  utils.h
single_machine/: main_1.cpp
